<resources>
    <string name="app_name">Just Java</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">ORDER</string>
    <string name="error_too_much">You cannot order more than one hundred.</string>
    <string name="error_too_little">You must order at least one.</string>
    <string name="email_subject">Kaptain Kunal\'s Order</string>
    <string name="email_customer">Kaptain Kunal</string>
    <string name="email_add_whipped_cream">Add whipped cream? </string>
    <string name="email_add_chocolate">Add chocolate? </string>
    <string name="thank_you">Thank you!</string>
    <string name="email_quantity">Quantity: </string>
    <string name="email_total">Total: $</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="your_name">Your Name</string>
    <string name="error_name">Please enter your name.</string>
</resources>
